--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <h2>Write-up</h2>
         <p><!-- WRITE UP HERE --></p>
-    
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
