created a set to pull all unique types of crime, started next steps

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="container"> <!-- Centers content and sets max width -->
         <h1>Assignment 2: Interactive Visualization</h1>
         
-
+        <div class="controls">
+            
+        </div>
 
         <h2>Write-up</h2>
         <p><!-- WRITE UP HERE --></p>
