Preproccess data to sum up number of crimes for each type during each year, then draw lines based on data

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="controls">
             
         </div>
-
+        <div id="vis"></div>
         <h2>Write-up</h2>
         <p><!-- WRITE UP HERE --></p>
     <script src="https://d3js.org/d3.v7.min.js"></script>
