--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 </head>
 
 <body>
+    <div id="tooltip" style="display:none"></div>
     <div class="container"> <!-- Centers content and sets max width -->
         <h1>Assignment 2: Interactive Visualization</h1>
 
+        <div id="vis"></div>
+
         <div class="controls">
-            <h2>Filter by type of crime:</h2>
+            <h3>Filter by type of crime:</h3>
             <div id="checkboxes"></div>
         </div>
-        <div id="vis"></div>
+
         <h2>Write-up</h2>
         <p><!-- WRITE UP HERE --></p>
         <script src="https://d3js.org/d3.v7.min.js"></script>
