waiting text and change initial selection

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="tooltip" style="display:none"></div>
     <div class="container"> <!-- Centers content and sets max width -->
         <h1>Assignment 2: Interactive Visualization</h1>
-
+        <p id="load">Please wait while the data loads...</p>
         <div id="vis"></div>
 
         <div class="controls">
