--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
         <h3>Design Decisions</h3>
             <p>We allow the user to highlight each line (type) on the graph to see more info
-            on how many reports were there on that year. We also allow the user to filter 
-            certain types of crimes by using checkboxes at the bottom. We ended up picking
+            on how many reports were there on that year. (Category 2) We also allow the user to filter 
+            certain types of crimes by using checkboxes at the bottom. (Category 1) We ended up picking
             a line graph as we it felt like the standard for comparing data over time. Line
             graphs would also make it easy for the user to compare trends. We considered taking 
             other subsets of data and visualize using bar charts. One approach we thought of 
@@ -48,8 +48,9 @@
                 done. We both took time seperately to work on the project and push to the repository 
                 while the other waited. We could have been more efficient at working concurrently, 
                 however we did not split up the tasks formally. We also ran into an issue of working 
-                on the project at the same time and pushing two different versions. We roughly spent 10
-                hours on this project so far, and the longest part was figuring out how to draw the lines.
+                on the project at the same time and pushing two different versions. We roughly spent 15 
+                (Candace: 8, Calvin: 7) hours on this project so far, and the longest part was figuring 
+                out how to draw the lines.
             </p> </br>
         
         <h3>Summary of AI</h3>
